--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Let's Go Camping</title>
-    </head>
-<body>
-    <header>
-    </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>fireside</title>
+  </head>
+  <body>
+    <header></header>
     <div id="app"></div>
     <script type="text/javascript" src="./dist/bundle.js"></script>
-</body>
+  </body>
 </html>
